# tree-sitter-clarity

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  requirements.txt  setup.py  tree-sitter.json
.github/workflows/: publish.yml
bindings/c/: tree-sitter-clarity.h  tree-sitter-clarity.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_clarity/: __init__.py  binding.c
bindings/python/ts_clarity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt  types.txt
