[package]
name = "tree-sitter-clarity"
description = "clarity grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "clarity"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-clarity"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.23"